# epstein-studio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/apps/epstein_ui/: apps.py  middleware.py  models.py  signals.py  urls.py  views.py
backend/apps/epstein_ui/management/commands/: index_pdfs.py
backend/apps/epstein_ui/migrations/: 0003_annotationvote.py  0004_annotation_hash.py  0005_annotation_comments.py  0013_add_comment_count.py  0014_remove_annotation_domain.py
backend/apps/epstein_ui/static/epstein_ui/: app.js  browse.js  style.css
backend/apps/epstein_ui/templates/epstein_ui/: about.html  browse.html  disclaimer.html  index.html  login.html  mobile_block.html  my_activity.html  notifications.html  register.html  start.html
backend/backend/: settings.py  urls.py
backend/email_header_extractor/: __init__.py  extract_headers.py
backend/static/epstein_ui/: app.js  browse.js
docs/: architecture.md  dev.md  operations.md
electron/: main.js
