[project]
name = "epstein-studio"
version = "0.1.0"
description = "Collaborative PDF annotation and investigation platform."
requires-python = ">=3.9"
dependencies = [
  "django>=4.2.28",
  "gunicorn>=23.0.0",
  "pillow",
  "python-dotenv>=1.2.1",
  "whitenoise>=6.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*", "apps*"]
